2.1-release  (...)
===========
- splice() no longer corrupts sublists.

2.1-release  (16 Jun 08)
===========
- SleepUtils#runCode(SleepClosure, ...) now accepts a null value
  for the ScriptInstance parameter.
- eliminated unnecessary frame creation within the Index operator
- added a check to cleanup the current frame when a bad index 
  error occurs.

2.1-beta 27  (30 May 08)
===========
- Virtual machine errors (stack overflow, out of memory) etc.
  are now caught within the interpreter and used to coerce
  a printout of the location of each Sleep stack frame.
- SleepClosure now implements the Runnable interface.
- fixed a null pointer exception for assertions triggered
  with no preceeding statements.
- created a java.util.List compatible data structure to back
  Sleep arrays.  this data structure is similar to LinkedList
  except it creates sublists with more desired performance
  characteristics
- added better error messages for ConcurrentModificationException's
  thrown by Java
- foreach loops now break if a ConcurrentModificationException
  is thrown.
- reimplemented regex pattern and hasmatch state cacheing to 
  prevent memory leaks.  Sleep will cache 128 patterns globally 
  and up to 16 hasmatch contexts per closure.  Remember that 
  hasmatch will remove its state after returning false.  These
  measures are in place to help prevent runaway uses of 
  hasmatch from eating all of the memory.
- bad index errors (IndexOutOfBoundsException) are now more
  descriptive in some cases.
- sublists are now serializable
- function("blah") will now throw an error if argument does not
  begin with &
- empty functions now retain proper line number information 
  (compiler introduces a NOP into the body of an empty function)
- reworked how Sleep handles &function literals--the compiler
  transforms these into a call against function('&function')--
  this has the benefit of providing more debug info in a trace