@@ -1,0 +1,5 @@
+%(a => 'apple', c => 'cat', n => 443, b => 'boy')
+apple
+cat
+443
+boy
